[Fix] Style.css scrollbar-x

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
 
 @media only screen and (max-width: 1300px) {
     .container {
+        overflow-x: hidden;
         height: auto;
         background-size: 50%;
         background-position: 
@@ -124,6 +125,7 @@ body {
 
     .container__main__card {
         width: 375px;
+        margin: auto auto;
         flex-direction: column-reverse;
         background-size: 20%;
         background-position: 52% 65%;
